# Python_web_HW_4

./: main.py  pyproject.toml
storage/: data.json
