[tool.poetry]
name = "web-hw1"
version = "0.1.0"
description = ""
authors = ["Artem <atlas.monker@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw1"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
